@@ -43,21 +43,26 @@ void TerminalThemeSet(const char *Name, const char *Value)
     SetVar(TermTheme, Name, Value);
 }
 
-void TerminalThemeApply(TERMWIDGET *TW, const char *Type)
+static char *TerminalThemeLoadValue(char *RetStr, const char *Theme, const char *Attrib)
 {
     char *Tempstr=NULL;
+		const char *ptr;
 
     if (! TermTheme) TerminalThemeInit();
-    Tempstr=MCopyStr(Tempstr, Type, ":Attribs", NULL);
-    TW->Attribs=CopyStr(TW->Attribs, TerminalThemeGet(Tempstr));
-    Tempstr=MCopyStr(Tempstr, Type, ":CursorAttribs", NULL);
-    TW->CursorAttribs=CopyStr(TW->CursorAttribs, TerminalThemeGet(Tempstr));
-    Tempstr=MCopyStr(Tempstr, Type, ":SelectedAttribs", NULL);
-    TW->SelectedAttribs=CopyStr(TW->SelectedAttribs, TerminalThemeGet(Tempstr));
-    Tempstr=MCopyStr(Tempstr, Type, ":CursorLeft", NULL);
-    TW->CursorLeft=CopyStr(TW->CursorLeft, TerminalThemeGet(Tempstr));
-    Tempstr=MCopyStr(Tempstr, Type, ":CursorRight", NULL);
-    TW->CursorRight=CopyStr(TW->CursorRight, TerminalThemeGet(Tempstr));
 
+    Tempstr=MCopyStr(Tempstr, Theme, ":", Attrib, NULL);
+		ptr=TerminalThemeGet(Tempstr);
+		if (StrValid(ptr)) RetStr=CopyStr(RetStr, ptr);
+ 
     Destroy(Tempstr);
+		return(RetStr);
+}
+
+void TerminalThemeApply(TERMWIDGET *TW, const char *Type)
+{
+    TW->Attribs=TerminalThemeLoadValue(TW->Attribs, Type, "Attribs");
+    TW->CursorAttribs=TerminalThemeLoadValue(TW->CursorAttribs, Type, "CursorAttribs");
+    TW->SelectedAttribs=TerminalThemeLoadValue(TW->SelectedAttribs, Type, "SelectedAttribs");
+    TW->CursorLeft=TerminalThemeLoadValue(TW->CursorLeft, Type, "CursorLeft");
+    TW->CursorRight=TerminalThemeLoadValue(TW->CursorRight, Type, "CursorRight");
 }
