@@ -63,6 +63,7 @@ Copyright (c) 2015 Colum Paget <colums.projects@googlemail.com>
 #include "Terminal.h"
 #include "TerminalMenu.h"
 #include "TerminalChoice.h"
+#include "TerminalProgress.h"
 #include "TerminalBar.h"
 #include "Process.h"
 #include "SecureMem.h"
